
Next
----

New features:

- We've added a ``MemoryFile`` class which supports formatted in-memory
  feature collections (#501).
  
Bug fixes:

- An ``AttributeError`` raised when the ``--bbox`` option of fio-cat is used
  with more than one input file has been fixed (#543, #544).
- Obsolete and derelict fiona.tool module has been removed.
- Require six version 1.7 or higher (#550).

1.8a1 (2017-11-06)
------------------

New features:

- Each call of ``writerecords()`` involves one or more transactions of up to
  20,000 features each. This improves performance when writing GeoPackage files
  as the previous transaction size was only 200 features (#476, #491).

Packaging:

- Fiona's Cython source files have been refactored so that there are no longer
  separate extension modules for GDAL 1.x and GDAL 2.x. Instead there is a base
  extension module based on GDAL 2.x and shim modules for installations that
  use GDAL 1.x.

1.7.10.post1 (2017-10-30)
-------------------------

- A post-release has been made to fix a problem with macosx wheels uploaded
  to PyPI.

1.7.10 (2017-10-26)
-------------------

Bug fixes:

- An extraneous printed line from the ``rio cat --layers`` validator has been
  removed (#478).

Packaging:

- Official OS X and Manylinux1 wheels (on PyPI) for this release will be
  compatible with Shapely 1.6.2 and Rasterio 1.0a10 wheels.

1.7.9.post1 (2017-08-21)
------------------------

This release introduces no changes in the Fiona package. It upgrades GDAL
from 2.2.0 to 2.2.1 in wheels that we publish to the Python Package Index.

1.7.9 (2017-08-17)
------------------

Bug fixes:

- Acquire the GIL for GDAL error callback functions to prevent crashes when
  GDAL errors occur when the GIL has been released by user code.
- Sync and flush layers when closing even when the number of features is not
  precisely known (#467).

1.7.8 (2017-06-20)
------------------

Bug fixes:

- Provide all arguments needed by CPLError based exceptions (#456).
