@@ -16,6 +16,8 @@ Bug fixes:
 - An ``AttributeError`` raised when the ``--bbox`` option of fio-cat is used
   with more than one input file has been fixed (#543, #544).
 - Obsolete and derelict fiona.tool module has been removed.
+- Revert the change in 0a2bc7c that discards Z in geometry types when a
+  collection's schema is reported (#541).
 - Require six version 1.7 or higher (#550).
 
 1.8a1 (2017-11-06)
